# maculate

./: .gitignore  CHANGELOG.md  NOTES.md  README.md  art.afdesign
libqalc/: Makefile  build.sh  configure.ac  default.nix  libqalculate.nix
libqalc-rs/: Cargo.toml  README.md
libqalc-rs/src/: function.rs  lib.rs  math_structure.rs  unit.rs  variables.rs
libqalc-rs/src/function/: mod.rs
libqalc-rs/src/function/impls/: basics.rs
libqalc/Qalculate/: Qalculate.h  Qalculate.hpp  dict.cpp  dict.hpp  graphing.cpp  graphing.hpp  internal.cpp  internal.hpp  main.cpp  main.h  main.hpp
libqalc/Qalculate/QalculateFramework.docc/: QalculateFramework.md
libqalc/build_ios/: build2.sh
libqalc/src/: Makefile.am  entry.cpp  main.cpp
maculate/: AboutView.swift  ContentView.swift  ExpressionField.swift  Extensions.swift  GraphView.swift  History.swift  OutputView.swift  maculate.entitlements  maculateApp.swift
maculate.xcodeproj/: project.pbxproj
maculate/Assets.xcassets/AppIcon.appiconset/: Contents.json
maculate/Assets.xcassets/Ghost.symbolset/: Contents.json
maculate/Managers/: CurrencyManager.swift  HistoryManager.swift
maculate/Views/: ContentView.swift  DictionaryView.swift  ExprFieldView.swift  Nav.swift  OutputView.swift
maculateTests/: maculateTests.swift
maculateUITests/: maculateUITests.swift  maculateUITestsLaunchTests.swift
rust/librulate/: Cargo.toml
rust/librulate/src/: lib.rs  unit.rs  variables.rs
rust/librulate/src/function/: mod.rs
server/: cron.ts  index.ts  package.json  pnpm-lock.yaml  reciepts.ts  types.ts
(+6 files in other folders)
