AC_INIT([Maculate], [0.1], [your.email@example.com])
AM_INIT_AUTOMAKE([foreign subdir-objects])

# Checks for programs
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for libraries
# Add checks for dependencies here if needed, e.g., PKG_CHECK_MODULES()

# Checks for header files
# AC_CHECK_HEADERS([<header1.h> <header2.h>])

# Output files
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
